# vigil

./: .agent-sentinel.yaml  .gitignore  CHANGELOG.md  Cargo.toml  DESIGN_NOTES.md  HANDOFF.md  PLUGINS.md  POLICY_ENGINE.md  README.md  example-policy.yaml  install-linux.sh  install.sh  test-block-bash.yaml  test-confirm.toml  ui-spec.md  vigil.toml
.github/workflows/: release.yml
crates/vigil-cli/: Cargo.toml
crates/vigil-cli/src/: fake_upstream.rs  main.rs  report.rs
crates/vigil-core/: Cargo.toml  build.rs
crates/vigil-core/src/: active.rs  budget.rs  burn_rate.rs  config.rs  drift.rs  envelope.rs  event.rs  exfil.rs  injection.rs  lib.rs  namegen.rs  notify.rs  pii.rs  plugin.rs  policy.rs  pricing.rs  provider.rs  replay.rs  risk.rs  scanner.rs  session.rs  store.rs
crates/vigil-fleet/: Cargo.toml
crates/vigil-fleet/src/: lib.rs
crates/vigil-mcp/: Cargo.toml
crates/vigil-mcp/src/: lib.rs  main.rs
crates/vigil-plugin/: Cargo.toml
crates/vigil-plugin/src/: lib.rs
crates/vigil-proxy/: Cargo.toml
crates/vigil-proxy/src/: lib.rs
crates/vigil-tui/: Cargo.toml
crates/vigil-tui/src/: lib.rs
crates/vigil-watch/: Cargo.toml
crates/vigil-watch/src/: lib.rs
crates/vigil-web/: Cargo.toml
crates/vigil-web/assets/: app.js  index.html  style.css
crates/vigil-web/src/: lib.rs
demo/: README.md  demo.tape  mock-agent.py  mock-agent.sh
plugins/alert-logger/: Cargo.toml
plugins/alert-logger/src/: lib.rs
plugins/otel-exporter/: Cargo.toml
plugins/otel-exporter/src/: lib.rs
plugins/slack-notifier/: Cargo.toml
plugins/slack-notifier/src/: lib.rs
