[workspace]
members = [
    "crates/vigil-cli",
    "crates/vigil-core",
    "crates/vigil-plugin",
    "crates/vigil-proxy",
    "crates/vigil-mcp",
    "crates/vigil-tui",
    "crates/vigil-watch",
    "plugins/alert-logger",
    "plugins/slack-notifier",
    "plugins/otel-exporter",
]
default-members = ["crates/vigil-cli"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["zer0contextlost <zer0contextlost@proton.me>"]
license = "MIT"
repository = "https://github.com/zer0contextlost/vigil"

[workspace.metadata]
description = "Runtime observability and policy enforcement for AI coding agents"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }
