[package]
name = "vigil-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
serde_yaml = "0.9"
regex = "1"
ulid = { version = "1", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
toml = "0.8"
sysinfo = "0.30"
