[package]
name = "vigil-fleet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
vigil-core = { path = "../vigil-core" }
tracing = { workspace = true }
