[package]
name = "vigil-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Plugin SDK for vigil — implement VigilPlugin and export it with declare_plugin!"

[dependencies]
vigil-core = { path = "../vigil-core" }
serde_json = "1.0"
async-trait = "0.1"

[build-dependencies]
# nothing — build.rs just shells out to rustc
