[package]
name = "vigil-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
vigil-core = { path = "../vigil-core" }
serde_json = "1"
