[package]
name = "vigil-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = [] }
rust-embed = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1"
vigil-core = { path = "../vigil-core" }
vigil-proxy = { path = "../vigil-proxy" }
tracing = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
